3 slides de la presentación html

--- a/presentations/html5/firefox-open-badgaes_es.html
+++ b/presentations/html5/firefox-open-badgaes_es.html
@@ -67,19 +67,18 @@
     Copia simplemente cada bloque completo para cada diapositiva que quieras. Las diapositivas especiales tienen clases extra. Cada dispositiva necesita un ID que permite un marcador y saltar a esa diapositiva específicamente.
 -->
 
-  <div id="cover" class="slide"><div>
+  <div id="cover" class="slide cover h"><div>
     <section>
       <header>
-        <h2>Mozilla Open Badges</h2>
+
       </header>
-      <img src="pictures/OpenBadges/Open_Badges_Presentation_-_General-0.png" 
-           class="middle" height="560"
-           alt="High-five at the Mozilla Festival!">
+      <img src="pictures/OpenBadges/Open_Badges_Presentation_-_General-0.png"
+           alt="Open badges Start!">
       <small class="byline">
-        {Nombre}, {Apellido}, {Conferencia}, {Lugar}, {fecha}
+        {Alvar}, {Maciel}, {FLISoL}, {Grupo de Trabajo de Software Libre - Agenda Digital }, {26 de Abril}
       </small>
       <footer class="notes">
-        Esta es una tapa simple con una imagen en el medio
+        inicio
       </footer>
     </section>
   </div></div>
@@ -87,32 +86,45 @@
 <!-- end slide block -->
 
 <!-- ===================================================================
-Firefox OS 
+Pára qué usar Open badges
 ======================================================================== -->
 
-  <div id="zomgfirefoxos" class="slide shout"><div>
+  <div id="saberes lejanos" class="slide cover h"><div>
     <section>
       <header>
-        <h2>Firefox OS</h2>
+
       </header>
+      <img src="pictures/OpenBadges/Open_Badges_Presentation_-_General-1_Es.png" 
+           class="middle" height="560"
+           alt="Saberes desconectados">
     <footer class="notes">
     </footer>
     </section>
   </div></div>
 
-  <div id="firefoxosbullets" class="slide"><div>
+
+<div id="saberes lejanos 2" class="slide cover"><div>
     <section>
       <header>
-        <h2>Firefox OS</h2>
+
       </header>
-      <ul class="longlist">
-        <li>Firefox OS es el único sistema operativo móvil completamente abierto basado en estándares web</li>
-        <li>Está pensado para mercados que no tengan acceso a los sistemas operativos líderes actuales</li>
-        <li>Está basado completamanete en la Web, no hay una capa nativa. Tanto el sistema operativo como las aplicaciones estás escritas en HTML5. El acceso al hardware ocurre a través de un núcleo Linux que es el mismo que utiliza Android</li>
-        <li>HTML5 es un ciudadano de primera clase en Firefox OS, es el único SO que mantiene la promesa que otros dieron años atrás (No se necesita SDK)</li>
-        <li>Todo lo que necesitas saber para crear una aplicación para Firefox OS es conocer HTML5</li>
-        <li>Firefox OS es una realidad, tenemos teléfonos vendidos en España, Polonia, Venezuela y Colombia</li>
-      </ul>
+      <img src="pictures/OpenBadges/Open_Badges_Presentation_-_General-2_Es.png"
+           alt="Saberes desconectados">
+    <footer class="notes">
+    </footer>
+    </section>
+  </div></div>
+
+
+
+
+
+  <div id="Conectar Saberes" class="slide shout"><div>
+    <section>
+      <header>
+        <h2>Y si usamos Insignias</h2>
+      </header>
+      
     <footer class="notes">
     </footer>
     </section>
