corrección de errores de tipeo

--- a/presentations/openbadges/firefox-open-badges_es.html
+++ b/presentations/openbadges/firefox-open-badges_es.html
@@ -53,7 +53,7 @@
            
            alt="inicio">
       <small class="byline">
-        {Alvar}, {Maciel}, {Grupo de Trabajo de Software Libre - Agenda Digital}, {CABA}, {26 de Abril 2014}
+        {Alvar Maciel}, {Grupo de Trabajo de Software Libre - Agenda Digital}, {CABA}, {25 de Abril 2014}
       </small>
       <footer class="notes">
 
@@ -94,7 +94,7 @@
 <div id="propuesta" class="slide cover w"><div>
     <section>
       <header>
-        <h2>¿Que tal si usamos insignias para los aprendizaje?</h2>
+        <h2>¿Que tal si usamos insignias para los aprendizajes?</h2>
       </header>
       <img src="pictures/OpenBadges/Open_Badges_Presentation_-_General-3_Es.png" 
            class="middle"
