cambio diapo final

--- a/presentations/openbadges/firefox-open-badges_es.html
+++ b/presentations/openbadges/firefox-open-badges_es.html
@@ -409,8 +409,8 @@
       <ul class="nobull">
         <li>{Alvar Maciel}</li>
         <li>{<a href="http://twitter.com/amaciel">@amaciel</a>}</li>
-        <li><strong>Diapos</strong>: {<a href="http://bit.ly/1fw0Udg">En HTML</a>}</li>
-        <li><strong>Fuente:</strong>: {<a href="https://github.com/alvarmaciel/OpenBadges/tree/master/presentations">En GitHub</a>}</li>
+        <li><strong>Diapos</strong>: {<a href="http://bit.ly/1fw0Udg">acercadelaeducacion.com.ar</a>}</li>
+        <li><strong>Fuente:</strong>: {<a href="https://github.com/alvarmaciel/OpenBadges/tree/master/presentations">github.com/alvarmaciel/OpneBadges</a>}</li>
       </ul>
       <small class="credits">
         <a href="https://flic.kr/p/6rWSwL">Photo by JD Hancock</a>
